// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should keep styles/template and transform styleUrls/templateUrl to proper syntax for CommonJS/ESM: app.component.ts-with-esm-false 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.AppComponent = void 0;
const tslib_1 = require(\\"tslib\\");
const core_1 = require(\\"@angular/core\\");
let AppComponent = class AppComponent {
    constructor() {
        this.title = 'test-app-v10';
    }
};
AppComponent = (0, tslib_1.__decorate)([
    (0, core_1.Component)({
        selector: 'app-root',
        template: require(\\"./app.component.html\\"),
    })
], AppComponent);
exports.AppComponent = AppComponent;
//# "
`;

exports[`should keep styles/template and transform styleUrls/templateUrl to proper syntax for CommonJS/ESM: app.component.ts-with-esm-true 1`] = `
"import { __decorate } from \\"tslib\\";
import __NG_CLI_RESOURCE__0 from \\"./app.component.html\\";
import { Component } from '@angular/core';
let AppComponent = class AppComponent {
    constructor() {
        this.title = 'test-app-v10';
    }
};
AppComponent = __decorate([
    Component({
        selector: 'app-root',
        template: __NG_CLI_RESOURCE__0,
    })
], AppComponent);
export { AppComponent };
//# "
`;

exports[`should keep styles/template and transform styleUrls/templateUrl to proper syntax for CommonJS/ESM: foo.component.ts-with-esm-false 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.FooComponent = void 0;
const tslib_1 = require(\\"tslib\\");
const core_1 = require(\\"@angular/core\\");
let FooComponent = class FooComponent {
    constructor() {
        this.title = 'test-app-v10';
    }
};
FooComponent = (0, tslib_1.__decorate)([
    (0, core_1.Component)({
        selector: 'app-root',
        template: \`<h1>Foo Bar</h1>\`,
    })
], FooComponent);
exports.FooComponent = FooComponent;
//# "
`;

exports[`should keep styles/template and transform styleUrls/templateUrl to proper syntax for CommonJS/ESM: foo.component.ts-with-esm-true 1`] = `
"import { __decorate } from \\"tslib\\";
import { Component } from '@angular/core';
let FooComponent = class FooComponent {
    constructor() {
        this.title = 'test-app-v10';
    }
};
FooComponent = __decorate([
    Component({
        selector: 'app-root',
        template: \`<h1>Foo Bar</h1>\`,
    })
], FooComponent);
export { FooComponent };
//# "
`;

exports[`should keep styles/template and transform styleUrls/templateUrl to proper syntax for CommonJS/ESM: icon.component.ts-with-esm-false 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.IconComponent = void 0;
const tslib_1 = require(\\"tslib\\");
const core_1 = require(\\"@angular/core\\");
let IconComponent = class IconComponent {
    constructor() {
        this.fillColor = 'rgb(255, 0, 0)';
    }
};
IconComponent = (0, tslib_1.__decorate)([
    (0, core_1.Component)({
        selector: 'app-icon',
        template: require(\\"./icon.component.svg\\"),
    })
], IconComponent);
exports.IconComponent = IconComponent;
//# "
`;

exports[`should keep styles/template and transform styleUrls/templateUrl to proper syntax for CommonJS/ESM: icon.component.ts-with-esm-true 1`] = `
"import { __decorate } from \\"tslib\\";
import __NG_CLI_RESOURCE__0 from \\"./icon.component.svg\\";
import { Component } from '@angular/core';
let IconComponent = class IconComponent {
    constructor() {
        this.fillColor = 'rgb(255, 0, 0)';
    }
};
IconComponent = __decorate([
    Component({
        selector: 'app-icon',
        template: __NG_CLI_RESOURCE__0,
    })
], IconComponent);
export { IconComponent };
//# "
`;
